--- a/src/components/Gallery/Gallery.scss
+++ b/src/components/Gallery/Gallery.scss
@@ -2,16 +2,21 @@
     background: $secondary-color;
     border-radius: 25px;
     padding: 56px 50px 43px 50px;
+    margin-bottom: 50px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 60px;
 
-    @media (min-width: $breakpoint-mobile) and (max-width: $breakpoint-tablet) {
+    @include tablet {
         grid-template-columns: repeat(2, 1fr);
         gap: 30px;
     }
 
-    @media (min-width: 320px) and (max-width: $breakpoint-mobile) {
+    @include mobile {
         grid-template-columns: 1fr;
+        background: transparent;
+        padding: 0;
+        gap: 20px;
+        margin-bottom: 27px;
     }
 }
