--- a/src/components/Header/Navbar/Navbar.scss
+++ b/src/components/Header/Navbar/Navbar.scss
@@ -8,11 +8,11 @@
     @include font;
     line-height: 142.6%;
 
-    @media (min-width: $breakpoint-mobile) and (max-width: $breakpoint-tablet) {
+    @include tablet {
         @include font(500, 1.3rem);
     }
 
-    @media (min-width: 320px) and (max-width: $breakpoint-mobile) {
+    @include mobile {
         @include font(500, 0.8rem);
         text-transform: uppercase;
     }
@@ -21,17 +21,21 @@
         display: flex;
         gap: 57px;
 
-        @media (min-width: $breakpoint-mobile) and (max-width: $breakpoint-tablet) {
+        @include tablet {
             gap: 45px;
         }
-    
-        @media (min-width: 320px) and (max-width: $breakpoint-mobile) {
+
+        @include mobile {
             gap: 26px;
         }
 
         a {
             color: $primary-color;
             text-decoration: none;
+
+            &.navbar__links--active {
+                text-decoration: underline;
+            }
         }
     }
 }
