--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,11 @@
 @import "./utilities/reset-css.scss";
 @import "./utilities/general.scss";
+@import "./utilities/keyframes.scss";
 @import "./components/Header/Navbar/Navbar.scss";
 @import "./components/Header/Header.scss";
 @import "./components/Footer/Footer.scss";
 @import "./components/Banner/Banner.scss";
 @import "./components/Gallery/Gallery.scss";
 @import "./components/Card/Card.scss";
-
+@import "./components/Collapse/Collapse.scss";
 @import "./pages/Error/Error.scss";
