--- a/src/pages/Error/Error.scss
+++ b/src/pages/Error/Error.scss
@@ -7,12 +7,12 @@
     padding: 139px 0;
     color: $primary-color;
 
-    @media (min-width: $breakpoint-mobile) and (max-width: $breakpoint-tablet) {
+    @include tablet {
         gap: 126px;
         padding: 126px 0;
     }
 
-    @media (min-width: 320px) and (max-width: $breakpoint-mobile) {
+    @include mobile {
         gap: 113px;
         padding: 113px 0;
     }
@@ -21,12 +21,12 @@
         @include font(700, 18rem);
         line-height: 142.6%;
 
-        @media (min-width: $breakpoint-mobile) and (max-width: $breakpoint-tablet) {
-            @include font(700, 12rem)
+        @include tablet {
+            @include font(700, 12rem);
         }
-    
-        @media (min-width: 320px) and (max-width: $breakpoint-mobile) {
-            @include font(700, 6rem)
+
+        @include mobile {
+            @include font(700, 6rem);
         }
     }
 
@@ -34,12 +34,12 @@
         @include font(500, 2.25rem);
         line-height: 142.6%;
 
-        @media (min-width: $breakpoint-mobile) and (max-width: $breakpoint-tablet) {
+        @include tablet {
             @include font(500, 1.5rem);
             width: 90%;
         }
-    
-        @media (min-width: 320px) and (max-width: $breakpoint-mobile) {
+
+        @include mobile {
             @include font(500, 1.125rem);
             width: 90%;
         }
@@ -51,11 +51,11 @@
         line-height: 142.6%;
         text-decoration: underline;
 
-        @media (min-width: $breakpoint-mobile) and (max-width: $breakpoint-tablet) {
+        @include tablet {
             @include font(500, 1rem);
         }
-    
-        @media (min-width: 320px) and (max-width: $breakpoint-mobile) {
+
+        @include mobile {
             @include font(500, 0.875rem);
         }
     }
