--- a/src/utilities/general.scss
+++ b/src/utilities/general.scss
@@ -1,25 +1,36 @@
 @import "./variables.scss";
+@import "./mixins.scss";
 
 body {
+    // max-width: 1440px;
+    margin: auto;
     font-family: 'Montserrat', sans-serif;
     background: $white-color;
     color: $white-color;
+    box-sizing: border-box;
 }
 
 #root {
     max-width: 1440px;
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
+    min-height: 100vh;
     margin: auto;
-    gap: 50px;
+    box-sizing: border-box;
 
-    @media (min-width: $breakpoint-mobile) and (max-width: $breakpoint-tablet) {
-        max-width: $breakpoint-tablet;
-    }
+    .wrapper {
+        max-width: 1240px;
+        margin: auto;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 50px;
 
-    @media (min-width: 320px) and (max-width: $breakpoint-mobile) {
-        max-width: 348px;
-        gap: 27px;
+        @include tablet {
+            max-width: 780px;
+        }
+
+        @include mobile {
+            max-width: 335px;
+            gap: 27px;
+        }
     }
 }
