Added the components needed for the accommodation page, applied all the necessary data

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,4 +8,7 @@
 @import "./components/Gallery/Gallery.scss";
 @import "./components/Card/Card.scss";
 @import "./components/Collapse/Collapse.scss";
+@import "./components/Slideshow/Slideshow.scss";
+@import "./components/StarRating/StarRating.scss";
+@import "./pages/Accommodation/Accommodation.scss";
 @import "./pages/Error/Error.scss";
